Incognito icon added to Windows taskbar jumplist.

On Windows' taskbar's jumplist, both "New window" and "New incognito window" links have main Chrome icon.
A rough Incognito icon is added to the repository and used instead of Chrome icon for new incognito window link.

BUG=680904
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.win:win10_chromium_x64_rel_ng

Review-Url: https://codereview.chromium.org/2660153002
Cr-Commit-Position: refs/heads/master@{#457032}

Former-commit-id: 596cbc2cc875076c361b1b77e840919a2697b67d